# exercicios-de-fixacao-em-python

./: 04-Processador-de-Vendas(Médio).py  05-Sistema-de-RPG-Expandido(Médio).py  1-1-Agenda-de-Contatos.py  1-3-Validador-de-Senhas.py  2-Analisador-de-Notas(Fácil).py  5-Sistema-de-RPG-Expandido(Médio).py  README.md  pyproject.toml
