[project]
name = "exercicios-de-fixacao"
version = "0.1.0"
description = ""
authors = [
    {name = "Lucas",email = "lucasdeoliveira937@gmail.com"}
]
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard] (>=0.137.1,<0.138.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
